# ai-form-filler

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DESIGN.md  OVERVIEW.md  REQUIREMENTS.md  TESTING.md
examples/: my-form-data.example.json
src/ai_form_filler/: __init__.py  __main__.py  bootstrap.py  browser.py  browser_uc.py  cli.py  constants.py  env_config.py  filler.py  filler_selenium.py  form_extract.py  form_fields_js.py  llm.py  models.py  module.py  run.py
tests/: __init__.py  conftest.py  test_bootstrap.py  test_cli.py  test_constants.py  test_env_config.py  test_form_extract.py  test_llm.py  test_llm_client_mocked.py  test_models.py  test_navigation.py  test_pipeline_browser_integration.py  test_run.py  test_smoke.py
