[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-form-filler"
version = "0.2.0"
description = "Lightweight AI-powered form filler using Playwright and Ollama; works with your own browser."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "ai-form-filler" }]
dependencies = [
    "playwright>=1.49",
    "ollama>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
]
# Undetected ChromeDriver + Selenium (stealthier automation; optional)
stealth = [
    "undetected-chromedriver>=3.5",
    "selenium>=4.15",
]

[project.scripts]
ai-form-filler = "ai_form_filler.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
